--- a/about-us.html
+++ b/about-us.html
@@ -19,9 +19,7 @@
   <!--favicon-->
   <link rel="icon" type="images/favicon.png" href="images/favicon.png">
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Oswald:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&family=Spartan:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -31,19 +29,19 @@
 
  <!-- Top Header -->
 
- <section class="top-header">
+ <section class="mid-header">
   <div class="container">
     <div class="row">
-      <div class="col-md-2 top-left">
+      <div class="col-md-2 mid-left">
         <a href="index.html"><img src="images/logo.png" alt=""></a>
       </div>
-      <div class="col-md-6 top-mid">
+      <div class="col-md-6 mid-mid">
         <form action="#">
           <input type="text" placeholder="Search Products & Brands">
           <input type="submit" value="Search">
         </form>
       </div>
-      <div class="col-md-4 top-right">
+      <div class="col-md-4 mid-right">
         <div class="page-btn green">
           <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
         </div>
@@ -57,7 +55,7 @@
   </div>
 </section>
 <!-- End -->
-<!-- Top-Header End -->
+<!-- mid-header End -->
 <!-- Header -->
 <div class="header">
 <div class="container">
