--- a/policy.html
+++ b/policy.html
@@ -35,19 +35,19 @@
     
     <!-- Top Header -->
   
-    <section class="top-header">
+    <section class="mid-header">
       <div class="container">
         <div class="row">
-          <div class="col-md-2 top-left">
+          <div class="col-md-2 mid-left">
             <a href="index.html"><img src="images/logo.png" alt=""></a>
           </div>
-          <div class="col-md-6 top-mid">
+          <div class="col-md-6 mid-mid">
             <form action="#">
               <input type="text" placeholder="Search Products & Brands">
               <input type="submit" value="Search">
             </form>
           </div>
-          <div class="col-md-4 top-right">
+          <div class="col-md-4 mid-right">
             <div class="page-btn green">
               <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
             </div>
@@ -61,7 +61,7 @@
       </div>
     </section>
     <!-- End -->
-    <!-- Top-Header End -->
+    <!-- mid-header End -->
   <!-- Header -->
   <div class="header">
     <div class="container">
