--- a/about-us.html
+++ b/about-us.html
@@ -27,68 +27,92 @@
 
 <body class="inner-body">
 
- <!-- Top Header -->
+ <!-- Left Catagory menu-->
 
- <section class="mid-header">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-2 mid-left">
-        <a href="index.html"><img src="images/logo.png" alt=""></a>
+ <div class="catagory-menu">
+  <ul>
+    <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
+    <li><a href="#"><span><img src="images/pantry.png" alt=""></span> Pantry</a></li>
+    <li><a href="#"><span><img src="images/mobiles.png" alt=""></span> Mobiles</a></li>
+    <li><a href="#"><span><img src="images/fashion.png" alt=""></span> Fashion</a></li>
+    <li><a href="#"><span><img src="images/electronics.png" alt=""></span> Electronics</a></li>
+    <li><a href="#"><span><img src="images/applineces.png" alt=""></span> Home Appliances</a></li>
+  </ul>
+</div>
+
+<!-- Left Catagory menu end -->
+
+<!-- Header -->
+<div class="header sticky-top">
+<!-- Top Header -->
+<div class="top-header">
+  <div class="row">
+    <div class="col-md-6 top-left">
+      <ul>
+        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+      </ul>
+      <p>free shiping over 1000 rupes!!</p>
+    </div>
+    <div class="col-md-6 top-right">
+      <div class="user-login">
+        <ul>
+          <li class="signin"><a href="login-page.html"><i class="fa fa-user"></i> Sign In / Sign Up</a></li>
+        </ul>
       </div>
-      <div class="col-md-6 mid-mid">
+      <div class="search_form">
         <form action="#">
-          <input type="text" placeholder="Search Products & Brands">
-          <input type="submit" value="Search">
+          <input class="search_filed" type="text" placeholder="Search Products & Brands">
+          <input class="search_btn" type="submit" value="Search">
         </form>
       </div>
-      <div class="col-md-4 mid-right">
-        <div class="page-btn green">
-          <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
-        </div>
-        <div class="user-login">
-          <ul>
-            <li class="signin"><a href="login-page.html"><i class="fa fa-user"></i> Sign In / Sign Up</a></li>
-          </ul>
-        </div>
+    </div>
+  </div>
+</div>
+<!-- End -->
+<!-- mid Header -->
+<div class="mid-header">
+  <div class="row">
+    <div class="col-md-2 mid-left">
+      <a href="index.html"><img src="images/logo.png" alt=""></a>
+    </div>
+    <div class="col-md-10 mid-right">
+      <div class="menu">
+        <ul class="menu-nav">
+            <li>
+                <a href="about-us.html">About</a>
+            </li>
+            <li>
+                <a href="condition.html">Terms</a>
+                <ul>
+                  <li><a href="#">Demo</a></li>
+                  <li><a href="#">Demo</a></li>
+                  <li><a href="#">Demo</a></li>
+              </ul>
+            </li>
+            <li>
+                <a href="policy.html">Privacy Policy</a>
+            </li>
+            <li>
+                <a href="faqs.html">FAQ</a>
+            </li>
+            <li>
+                <a href="contact-us.html">Contact</a>
+            </li>
+        </ul>
+      </div>
+      <div id="catagories" class="catagories">
+        <a href="#"><i class="fa fa-bars"></i></a>
+      </div>
+      <div class="page-btn green">
+        <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
       </div>
     </div>
   </div>
-</section>
-<!-- End -->
-<!-- mid-header End -->
-<!-- Header -->
-<div class="header">
-<div class="container">
-  <div class="row">
-    <div id="catagories" class="catagories page-btn">
-      <a href="#">All Catagories</a>
-    </div>
-    <div class="menu">
-      <ul class="menu-nav">
-          <li class="active">
-              <a href="about-us.html">About</a>
-          </li>
-          <li>
-              <a href="condition.html">Terms</a>
-              <ul>
-                <li><a href="#">Demo</a></li>
-                <li><a href="#">Demo</a></li>
-                <li><a href="#">Demo</a></li>
-            </ul>
-          </li>
-          <li>
-              <a href="policy.html">Privacy Policy</a>
-          </li>
-          <li>
-              <a href="faqs.html">FAQ</a>
-          </li>
-          <li>
-              <a href="contact-us.html">Contact</a>
-          </li>
-      </ul>
-  </div>
-  </div>
 </div>
+<!-- mid-header End -->
 </div>
 <!-- Header End -->
 <!-- Banner & Catagory_menu -->
@@ -96,18 +120,7 @@
 <div class="container">
 <div class="row">
   <div class="col-md-3">
-    <div class="catagory-menu">
-      <ul>
-        <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
-        <li><a href="#"><span><img src="images/pantry.png" alt=""></span> Pantry</a></li>
-        <li><a href="#"><span><img src="images/mobiles.png" alt=""></span> Mobiles</a></li>
-        <li><a href="#"><span><img src="images/fashion.png" alt=""></span> Fashion</a></li>
-        <li><a href="#"><span><img src="images/electronics.png" alt=""></span> Electronics</a></li>
-        <li><a href="#"><span><img src="images/applineces.png" alt=""></span> Home Appliances</a></li>
-      </ul>
-    </div>
     <div class="left-side-pro owl-carousel owl-theme">
-
       <div class="item">
           <div class="product-descrp">
             <a href="#">
