--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
       <li><a href="#"><span><img src="images/electronics.png" alt=""></span> Electronics</a></li>
       <li><a href="#"><span><img src="images/applineces.png" alt=""></span> Home Appliances</a></li>
     </ul>
+    <div class="cross">
+      <i class="far fa-times-circle"></i>
+    </div>
   </div>
 
   <!-- Left Catagory menu end -->
   
 <!-- Header -->
-<div class="header">
+<div class="header sticky-top">
   <!-- Top Header -->
   <div class="top-header">
     <div class="row">
@@ -106,7 +109,7 @@
           </ul>
         </div>
         <div id="catagories" class="catagories">
-          <a href="#"><i class="fa fa-bars"></i></a>
+          <a href="javascript:void(0)"><i class="fa fa-bars"></i></a>
         </div>
         <div class="page-btn green">
           <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
@@ -144,7 +147,7 @@
             <div class="product-descrp">
               <a href="#">
               <div class="pro-image">
-                <img src="images/nike-shoe-png.png" alt="">
+                <img src="images/12a.jpg" alt="">
               </div>
               <div class="wishlist"></div>
               <div class="pro-details text-center">
@@ -160,7 +163,7 @@
           <div class="product-descrp">
             <a href="#">
             <div class="pro-image">
-              <img src="images/OnePlus-9R-Featured-1-2.png" alt="">
+              <img src="images/13a.jpg" alt="">
             </div>
             <div class="wishlist"></div>
             <div class="pro-details text-center">
@@ -176,7 +179,7 @@
         <div class="product-descrp">
           <a href="#">
           <div class="pro-image">
-            <img src="images/products2.png" alt="">
+            <img src="images/14a.jpg" alt="">
           </div>
           <div class="wishlist"></div>
           <div class="pro-details text-center">
@@ -193,7 +196,7 @@
       <div class="product-descrp">
         <a href="#">
         <div class="pro-image">
-          <img src="images/8985943736350.png" alt="">
+          <img src="images/15a.jpg" alt="">
         </div>
         <div class="wishlist"></div>
         <div class="pro-details text-center">
@@ -213,10 +216,13 @@
         <div class="banner">
           <div class="banner-slider owl-carousel owl-theme">
             <div class="item">
+              <img src="images/banner_home3.png" alt="">
+            </div>
+            <div class="item">
               <img src="images/banner_002.png" alt="">
             </div>
             <div class="item">
-              <img src="images/banner_home.jpg" alt="">
+              <img src="images/banner_home2.jpg" alt="">
             </div>
             <div class="item">
               <img src="images/banner_001.png" alt="">
@@ -242,7 +248,7 @@
           <div class="product-descrp">
             <a href="#">
             <div class="pro-image coleql_height">
-              <img src="images/pro1.png" alt="">
+              <img src="images/15a.jpg" alt="">
             </div>
             <div class="wishlist"></div>
             <div class="pro-details text-center">
@@ -266,7 +272,7 @@
         <div class="product-descrp">
           <a href="#">
           <div class="pro-image coleql_height">
-            <img src="images/nike-shoe-png.png" alt="">
+            <img src="images/16a.jpg" alt="">
           </div>
           <div class="wishlist"></div>
           <div class="pro-details text-center">
@@ -290,7 +296,7 @@
       <div class="product-descrp">
         <a href="#">
         <div class="pro-image coleql_height">
-          <img src="images/OnePlus-9R-Featured-1-2.png" alt="">
+          <img src="images/17a.jpg" alt="">
         </div>
         <div class="wishlist"></div>
         <div class="pro-details text-center">
@@ -314,7 +320,7 @@
     <div class="product-descrp">
       <a href="#">
       <div class="pro-image coleql_height">
-        <img src="images/products2.png" alt="">
+        <img src="images/18a.jpg" alt="">
       </div>
       <div class="wishlist"></div>
       <div class="pro-details text-center">
@@ -339,7 +345,7 @@
   <div class="product-descrp">
     <a href="#">
     <div class="pro-image coleql_height">
-      <img src="images/8985943736350.png" alt="">
+      <img src="images/19a.jpg" alt="">
     </div>
     <div class="wishlist"></div>
     <div class="pro-details text-center">
@@ -392,7 +398,7 @@
               <div class="product-descrp">
                 <a href="#">
                 <div class="pro-image">
-                  <img src="images/pro1.png" alt="">
+                  <img src="images/12a.jpg" alt="">
                 </div>
                 <div class="wishlist"></div>
                 <div class="pro-details text-center">
@@ -408,7 +414,7 @@
             <div class="product-descrp">
               <a href="#">
               <div class="pro-image">
-                <img src="images/nike-shoe-png.png" alt="">
+                <img src="images/13a.jpg" alt="">
               </div>
               <div class="wishlist"></div>
               <div class="pro-details text-center">
@@ -424,7 +430,7 @@
           <div class="product-descrp">
             <a href="#">
             <div class="pro-image">
-              <img src="images/OnePlus-9R-Featured-1-2.png" alt="">
+              <img src="images/14a.jpg" alt="">
             </div>
             <div class="wishlist"></div>
             <div class="pro-details text-center">
@@ -440,7 +446,7 @@
         <div class="product-descrp">
           <a href="#">
           <div class="pro-image">
-            <img src="images/products2.png" alt="">
+            <img src="images/15a.jpg" alt="">
           </div>
           <div class="wishlist"></div>
           <div class="pro-details text-center">
@@ -457,7 +463,7 @@
       <div class="product-descrp">
         <a href="#">
         <div class="pro-image">
-          <img src="images/8985943736350.png" alt="">
+          <img src="images/16a.jpg" alt="">
         </div>
         <div class="wishlist"></div>
         <div class="pro-details text-center">
@@ -492,14 +498,13 @@
           <div class="product-descrp">
             <a href="#">
             <div class="pro-image coleql_height">
-              <img src="images/pro1.png" alt="">
+              <img src="images/12a.jpg" alt="">
             </div>
             <div class="wishlist"></div>
             <div class="pro-details text-center">
-              <p>Women's Sports 
-                Shoe</p>
-              <h5><del>₹ 39,990</del> <span>(20%)</span></h5>
-              <h4>₹ 39,990</h4>
+              <p>Designer Shirt</p>
+              <h5><del>₹ 5,990</del> <span>(20%)</span></h5>
+              <h4>₹ 3,990</h4>
             </div>
           </a>
           </div>
@@ -516,13 +521,13 @@
         <div class="product-descrp">
           <a href="#">
           <div class="pro-image coleql_height">
-            <img src="images/nike-shoe-png.png" alt="">
+            <img src="images/13a.jpg" alt="">
           </div>
           <div class="wishlist"></div>
           <div class="pro-details text-center">
-            <p>Nike Sports Shoe</p>
-            <h5><del>₹9,990</del> <span>(20%)</span></h5>
-            <h4>₹ 4,990</h4>
+            <p>Designer Shirt</p>
+            <h5><del>₹5,990</del> <span>(20%)</span></h5>
+            <h4>₹ 3,990</h4>
           </div>
         </a>
         </div>
@@ -540,15 +545,15 @@
       <div class="product-descrp">
         <a href="#">
         <div class="pro-image coleql_height">
-          <img src="images/OnePlus-9R-Featured-1-2.png" alt="">
+          <img src="images/14a.jpg" alt="">
         </div>
         <div class="wishlist"></div>
         <div class="pro-details text-center">
-          <p>OnePlus 9R</p>
-          <h5><del>₹ 49,990</del> <span>(10%)</span></h5>
-          <h4>₹ 39,990</h4>
+          <p>Designer Shirt</p>
+          <h5><del>₹5,990</del> <span>(20%)</span></h5>
+          <h4>₹ 3,990</h4>
         </div>
-        </a>
+      </a>
       </div>
       <div class="hover-box">
         <!-- <div class="page-btn2 blue">
@@ -558,19 +563,19 @@
           <a href="#">Add to Cart</a>
         </div>
       </div>
-      </div>
+  </div>
     
   <div class="item">
     <div class="product-descrp">
       <a href="#">
       <div class="pro-image coleql_height">
-        <img src="images/products2.png" alt="">
+        <img src="images/15a.jpg" alt="">
       </div>
       <div class="wishlist"></div>
       <div class="pro-details text-center">
-        <p>Sports Shoes</p>
-        <h5><del>₹ 3,990</del> <span>(20%)</span></h5>
-        <h4>₹ 9,990</h4>
+        <p>Designer Shirt</p>
+        <h5><del>₹5,990</del> <span>(20%)</span></h5>
+        <h4>₹ 3,990</h4>
       </div>
     </a>
     </div>
@@ -589,13 +594,13 @@
   <div class="product-descrp">
     <a href="#">
     <div class="pro-image coleql_height">
-      <img src="images/8985943736350.png" alt="">
+      <img src="images/16a.jpg" alt="">
     </div>
     <div class="wishlist"></div>
     <div class="pro-details text-center">
-      <p>Apple Watch</p>
-      <h5><del>₹ 39,990</del> <span>(20%)</span></h5>
-      <h4>₹ 49,990</h4>
+      <p>Designer Shirt</p>
+      <h5><del>₹5,990</del> <span>(20%)</span></h5>
+      <h4>₹ 3,990</h4>
     </div>
   </a>
   </div>
