--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     
         </div>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9 pr-0">
         <div class="banner">
           <div class="banner-slider owl-carousel owl-theme">
             <div class="item">
@@ -376,7 +376,7 @@
 <section class="banner-sec common-space">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-9">
+      <div class="col-md-9 pl-0">
         <div class="banner"> 
           <div class="banner-slider owl-carousel owl-theme">
             <div class="item">
