--- a/cart.html
+++ b/cart.html
@@ -266,7 +266,7 @@
             <a href="#">Buy Now</a>
           </div>
           <div class="page-btn2 orange">
-            <a href="#">Add to Cart</a>
+            <a href="cart.html">Add to Cart</a>
           </div>
         </div>
         </div>
