--- a/about-us.html
+++ b/about-us.html
@@ -48,6 +48,9 @@
 <div class="top-header">
   <div class="row">
     <div class="col-md-6 top-left">
+      <div id="catagories" class="catagories">
+        <a href="#"><i class="fa fa-bars"></i></a>
+      </div>
       <ul>
         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -103,11 +106,8 @@
             </li>
         </ul>
       </div>
-      <div id="catagories" class="catagories">
-        <a href="#"><i class="fa fa-bars"></i></a>
-      </div>
       <div class="page-btn green">
-        <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
+        <a href="product_details.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
       </div>
     </div>
   </div>
@@ -165,7 +165,7 @@
   </section>
   <!-- About End -->
   <!-- Products listing -->
-  <section class="product-listing">
+  <section class="product-listing product-display">
     <div class="common_space">
       <div class="page-title">
         <h4>TRENDING PRODUCTS</h4>
@@ -190,9 +190,9 @@
               <!-- <div class="page-btn2 blue">
                 <a href="#">Buy Now</a>
               </div> -->
-              <div class="page-btn2 orange">
-                <a href="cart.html">Add to Cart</a>
-              </div>
+              <!-- <div class="page-btn2 orange">
+              <a href="product_details.html">Add to Cart</a>
+            </div> -->
             </div>
         </div>
         <div class="item">
@@ -212,7 +212,7 @@
               <a href="#">Buy Now</a>
             </div> -->
             <div class="page-btn2 orange">
-              <a href="cart.html">Add to Cart</a>
+              <a href="product_details.html">Add to Cart</a>
             </div>
           </div>
       </div>
@@ -234,7 +234,7 @@
             <a href="#">Buy Now</a>
           </div> -->
           <div class="page-btn2 orange">
-            <a href="cart.html">Add to Cart</a>
+            <a href="product_details.html">Add to Cart</a>
           </div>
         </div>
         </div>
@@ -256,7 +256,7 @@
           <a href="#">Buy Now</a>
         </div> -->
         <div class="page-btn2 orange">
-          <a href="cart.html">Add to Cart</a>
+          <a href="product_details.html">Add to Cart</a>
         </div>
       </div>
     </div>
@@ -279,7 +279,7 @@
         <a href="#">Buy Now</a>
       </div> -->
       <div class="page-btn2 orange">
-        <a href="cart.html">Add to Cart</a>
+        <a href="product_details.html">Add to Cart</a>
       </div>
     </div>
     </div>
@@ -293,7 +293,7 @@
 
   <section class="footer">
     <div class="container">
-        <figure class="dots text-center mt-5">
+        <figure class="dots text-center">
             <img src="image/dots.jpg" alt="">
         </figure>
         <section class="main-footer common-space">
