--- a/condition.html
+++ b/condition.html
@@ -50,6 +50,9 @@
 <div class="top-header">
   <div class="row">
     <div class="col-md-6 top-left">
+      <div id="catagories" class="catagories">
+        <a href="javascript:void(0)"><i class="fa fa-bars"></i></a>
+      </div>
       <ul>
         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -105,11 +108,8 @@
             </li>
         </ul>
       </div>
-      <div id="catagories" class="catagories">
-        <a href="javascript:void(0)"><i class="fa fa-bars"></i></a>
-      </div>
       <div class="page-btn green">
-        <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
+        <a href="product_details.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
       </div>
     </div>
   </div>
@@ -176,7 +176,7 @@
   <!-- About End -->
   
    <!-- Products listing -->
-   <section class="product-listing">
+   <section class="product-listing product-display">
     <div class="common_space">
       <div class="page-title">
         <h4>TRENDING PRODUCTS</h4>
@@ -201,9 +201,9 @@
               <!-- <div class="page-btn2 blue">
                 <a href="#">Buy Now</a>
               </div> -->
-              <div class="page-btn2 orange">
-                <a href="cart.html">Add to Cart</a>
-              </div>
+              <!-- <div class="page-btn2 orange">
+              <a href="product_details.html">Add to Cart</a>
+            </div> -->
             </div>
         </div>
         <div class="item">
@@ -223,7 +223,7 @@
               <a href="#">Buy Now</a>
             </div> -->
             <div class="page-btn2 orange">
-              <a href="cart.html">Add to Cart</a>
+              <a href="product_details.html">Add to Cart</a>
             </div>
           </div>
       </div>
@@ -245,7 +245,7 @@
             <a href="#">Buy Now</a>
           </div> -->
           <div class="page-btn2 orange">
-            <a href="cart.html">Add to Cart</a>
+            <a href="product_details.html">Add to Cart</a>
           </div>
         </div>
         </div>
@@ -267,7 +267,7 @@
           <a href="#">Buy Now</a>
         </div> -->
         <div class="page-btn2 orange">
-          <a href="cart.html">Add to Cart</a>
+          <a href="product_details.html">Add to Cart</a>
         </div>
       </div>
     </div>
@@ -290,7 +290,7 @@
         <a href="#">Buy Now</a>
       </div> -->
       <div class="page-btn2 orange">
-        <a href="cart.html">Add to Cart</a>
+        <a href="product_details.html">Add to Cart</a>
       </div>
     </div>
     </div>
@@ -304,7 +304,7 @@
 
    <section class="footer">
     <div class="container">
-        <figure class="dots text-center mt-5">
+        <figure class="dots text-center">
             <img src="image/dots.jpg" alt="">
         </figure>
         <section class="main-footer common-space">
