--- a/product_details.html
+++ b/product_details.html
@@ -109,7 +109,7 @@
         <a href="#"><i class="fa fa-bars"></i></a>
       </div>
       <div class="page-btn green">
-        <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
+        <a href="product_details.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
       </div>
     </div>
   </div>
@@ -266,7 +266,7 @@
             <a href="#">Buy Now</a>
           </div>
           <div class="page-btn2 orange">
-            <a href="cart.html">Add to Cart</a>
+            <a href="product_details.html">Add to Cart</a>
           </div>
         </div>
         </div>
