--- a/index - Copy.html
+++ b/index - Copy.html
@@ -61,7 +61,7 @@
         </div>
         <div class="col-md-4 mid-right">
           <div class="page-btn green">
-            <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
+            <a href="product_details.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
           </div>
           <div class="user-login">
             <ul>
@@ -257,7 +257,7 @@
               <a href="#">Buy Now</a>
             </div> -->
             <div class="page-btn2 orange">
-              <a href="cart.html">Add to Cart</a>
+              <a href="product_details.html">Add to Cart</a>
             </div>
           </div>
       </div>
@@ -280,7 +280,7 @@
             <a href="#">Buy Now</a>
           </div> -->
           <div class="page-btn2 orange">
-            <a href="cart.html">Add to Cart</a>
+            <a href="product_details.html">Add to Cart</a>
           </div>
         </div>
     </div>
@@ -304,7 +304,7 @@
           <a href="#">Buy Now</a>
         </div> -->
         <div class="page-btn2 orange">
-          <a href="cart.html">Add to Cart</a>
+          <a href="product_details.html">Add to Cart</a>
         </div>
       </div>
       </div>
@@ -328,7 +328,7 @@
         <a href="#">Buy Now</a>
       </div> -->
       <div class="page-btn2 orange">
-        <a href="cart.html">Add to Cart</a>
+        <a href="product_details.html">Add to Cart</a>
       </div>
     </div>
 </div>
@@ -353,7 +353,7 @@
       <a href="#">Buy Now</a>
     </div> -->
     <div class="page-btn2 orange">
-      <a href="cart.html">Add to Cart</a>
+      <a href="product_details.html">Add to Cart</a>
     </div>
   </div>
 </div>
@@ -505,7 +505,7 @@
               <a href="#">Buy Now</a>
             </div>
             <div class="page-btn2 orange">
-              <a href="cart.html">Add to Cart</a>
+              <a href="product_details.html">Add to Cart</a>
             </div>
           </div>
       </div>
@@ -528,7 +528,7 @@
             <a href="#">Buy Now</a>
           </div>
           <div class="page-btn2 orange">
-            <a href="cart.html">Add to Cart</a>
+            <a href="product_details.html">Add to Cart</a>
           </div>
         </div>
     </div>
@@ -552,7 +552,7 @@
           <a href="#">Buy Now</a>
         </div>
         <div class="page-btn2 orange">
-          <a href="cart.html">Add to Cart</a>
+          <a href="product_details.html">Add to Cart</a>
         </div>
       </div>
       </div>
@@ -576,7 +576,7 @@
         <a href="#">Buy Now</a>
       </div>
       <div class="page-btn2 orange">
-        <a href="cart.html">Add to Cart</a>
+        <a href="product_details.html">Add to Cart</a>
       </div>
     </div>
 </div>
@@ -601,7 +601,7 @@
       <a href="#">Buy Now</a>
     </div>
     <div class="page-btn2 orange">
-      <a href="cart.html">Add to Cart</a>
+      <a href="product_details.html">Add to Cart</a>
     </div>
   </div>
 </div>
