--- a/index_copy.html
+++ b/index_copy.html
@@ -247,7 +247,7 @@
           </ul>
         </div>
         <div class="page-btn">
-          <a href="product_details.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
+          <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
         </div>
       </div>
     </div>
@@ -892,8 +892,8 @@
                 <div class="col-md-3 each-footer top-space">
                     <h4>JOIN US ON</h4>
                     <ul>
-                        <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 each-footer top-space">
